--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://xn--um8h.xn--5p9hxi/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "🏠.🦩🤝"
 theme = "ananke"
